# stackoverflow-56135785-answer

./: README.md  build.sh
FooBarLib/: CMakeLists.txt  FooBarLibConfig.cmake.in  foobar.cpp
foobar/: CMakeLists.txt  foobarConfig.cmake.in
useFoo/: CMakeLists.txt
